[project]
name = "synthesis_olas"
version = "0.1.0"
description = "A marketplace-ready swarm coordinator that hires specialized workers, serves its own monitoring API, and records request counts toward monetization targets."
readme = "README.md"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
